--- a/jinja_expl/templates/index.html
+++ b/jinja_expl/templates/index.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Hello world</h1>
     <h3>Random number: {{num}}</h3>
+    <a href="{{ url_for('get_blog') }}">Go to Blog</a>
 </body>
 <footer>
     <p>Copyright {{year}}</p>
